# gopilot-cli

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  go.mod  go.sum  pyproject.toml  中文开发文档.md
cmd/gopilot/: main.go
configs/: config.yaml
docs/agent/: API参考.md  README.md  开发者指南.md  快速入门.md  架构设计.md
docs/llm/: API参考.md  README.md  开发者指南.md  快速入门.md  架构设计.md
docs/tools/: API参考.md  README.md  开发者指南.md  快速入门.md  架构设计.md
internal/agent/: agent.go
internal/agent/colors/: colors.go
internal/agent/summarizer/: summarizer.go
internal/agent/tokenizer/: tokenizer.go
internal/config/: config.go
internal/llm/: client.go
internal/logger/: logger.go
internal/retry/: retry.go
internal/schema/: schema.go
internal/tools/: base.go  bash.go  file.go
internal/utils/: utils.go
internal/utils/path/: path.go
internal/utils/terminal/: terminal.go
src/: __init__.py  agent.py
src/llm/: __init__.py  base.py  llm_wrapper.py  openai_client.py
src/schema/: __init__.py  schema.py
src/tools/: __init__.py  base.py  bash_tool.py  file_tools.py
tests/: __init__.py  agent_test.go  bash_test.go  client_test.go  test_bash_tool.py  test_basic_chat.py  test_thinking.py  utils_test.go
